--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Pagina principal</title>
 </head>
 <body>
-    
+    <div>nuestro proyecto comienza aqui apenas comenzamos pero muy pronto sera un proyecto ternimado </div>
 </body>
 </html>
