inicio  de interfaz principal

--- a/index.html
+++ b/index.html
@@ -1,13 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos.css">
-    <title>Pagina principal</title>
-</head>
-<body>
-    <div>nuestro proyecto comienza aqui apenas  comenzamos pero muy pronto sera un proyecto ternimado </div>
-</body>
-</html>
+<!DOCTYPE html><!--le indica al navegador que tipo y version o estandar de HTML es esta pagina -->
+<html lang="en"><!--lang---para indicar el lenguaje de la pagina en este caso es en= español -->
+    <head><!--cabeza contenedor de  toda la informacion necesaria para funcionar la pagina todos los metadatos-->
+        <meta charset="UTF-8"><!--especifica con que caracteres puede estar la pagina web permite ñ tildes y emojis-->
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"><!--permite la compatibilidad con navegadores antiguos -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"><!--permite que la pagina tenga el mismo ancho de la pantalla donde se habra-->
+        <link rel="stylesheet" href="estilos.css"><!---->
+        <title>Pagina principal</title>
+    </head>
+    <body><!--contenido visible de la pagina web -->
+        <header><!--encabezado-->
+            
+        </header>       
+        <main><!-- contenido en el centro de la pagina es todo el mayor contenido -->  
+            <section><!--contenedpr seccion de la pagina --> 
+                <a href=""></a><!--permite navegar entre paginas -->
+                   <article><!--me permite escribir textos largos y contiene parrafos -->
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus vero, quos 
+                            repellat neque ad vel atque a eaque sunt! Quis temporibus officiis eligendi voluptas
+                             vel ad, dolorum in maiores nobis! </p>
+
+                            <img src="" alt=""> 
+                   </article>
+            </section>
+            <section>
+
+
+            </section>
+
+        </main>
+
+        <footer><!--pie de pagina--> 
+
+
+        </footer>
+    </body>
+</html>                     
+
+
