cambio pequeño CSS

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8"><!--especifica con que caracteres puede estar la pagina web permite ñ tildes y emojis-->
         <meta http-equiv="X-UA-Compatible" content="IE=edge"><!--permite la compatibilidad con navegadores antiguos -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"><!--permite que la pagina tenga el mismo ancho de la pantalla donde se habra-->
-        <link rel="stylesheet" href="estilos.css"><!---->
+        <link rel="stylesheet" href="./estilosIndex.css"><!---->
         <title>Pagina principal</title>
     </head>
     <body><!--contenido visible de la pagina web -->
