mejoro los estilos a la barra de navegacion

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://kit.fontawesome.com/d4cd33a1a3.js" crossorigin="anonymous"></script> <!-- permite usar inconos-->
+
     
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -20,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>WebTranding</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
